Update 'k8qdddaj3-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:3974f7f3aff34041fb0622983645c0ecc56d321a@sha256:19d84f0ba6ec95388a49769bff4bed88afd3f0683e0c14a8a2f08ed3b10d99e3

--- a/components/k8qdddaj3-python/overlays/development/deployment-patch.yaml
+++ b/components/k8qdddaj3-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: k8qdddaj3-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:3974f7f3aff34041fb0622983645c0ecc56d321a@sha256:19d84f0ba6ec95388a49769bff4bed88afd3f0683e0c14a8a2f08ed3b10d99e3
+          name: container-image
